Highlight sectors when hovering Refactored text group order to avoid flickering during raise() call

--- a/src/components/sunburst/Sunburst.scss
+++ b/src/components/sunburst/Sunburst.scss
@@ -12,6 +12,11 @@
 }
 
 .sunburst {
+  :global(.arc.highlighted) {
+    stroke: $gray-light-background;
+    stroke-width: 2px;
+  }
+
   :global(.arc.leaf) {
     fill: $gray-300;
   }
